welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:0: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:3: error: not found: value YELLOW
	marque(c);avance();marque(YELLOW);avance();marque(c);recule();droite();avance();marque(c);recule(2);marque();
                                  ^FlowerPot:3: error: not enough arguments for method marque: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	marque(c);avance();marque(YELLOW);avance();marque(c);recule();droite();avance();marque(c);recule(2);marque();
                                                                                                                  ^