welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def fleur(c:Color){
	marque(c);avance();marque(YELLOW);avance();marque(c);recule();droite();avance();marque(c);recule(2);marque();
}

def marque(c: Color){setCouleurBrosse(c);baisseBrosse();leveBrosse();}